apps/synapse-proxy/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: synapse-proxy
spec:
  serviceName: synapse-proxy
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: synapse-proxy
      app.kubernetes.io/name: synapse-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: synapse-proxy
        app.kubernetes.io/name: synapse-proxy
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - synapse
                        - matrix-discord
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: caddy
          image: caddy
          ports:
            - name: http
              containerPort: 8008
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          startupProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 5
            failureThreshold: 180
          volumeMounts:
            - name: synapse-proxy
              mountPath: /etc/caddy
              readOnly: true
            - name: synapse-proxy-data
              mountPath: /var/caddy
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - NET_BIND_SERVICE
                - NET_RAW
      volumes:
        - name: synapse-proxy
          configMap:
            name: synapse-proxy
        - name: synapse-proxy-data
          persistentVolumeClaim:
            claimName: synapse-proxy-data
