apps/synapse-proxy/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse-proxy
spec:
  ports:
    - name: http
      port: 8008
      targetPort: http
    - name: metrics
      port: 8008
      targetPort: http
  selector:
    app.kubernetes.io/instance: synapse-proxy
    app.kubernetes.io/name: synapse-proxy
